--- a/sale/index.html
+++ b/sale/index.html
@@ -48,79 +48,96 @@
                 </div>
             </div>
         </header>
+
+
         <!--section1-->
-        <section class="section1">
-            <div class="wrapper">
-                <p class="main-title"> Germitox je spoľahlivým liekom proti parazitom!
+       <section class="section5">
+	                   <p class="main-title"> Germitox je spoľahlivým liekom proti parazitom!
                 </p>
                 <p class="title-small">Úplne odstráni parazity a brušné červy z vášho tela do 30 dní
                 </p>
-                <div class="section1-left">
-                    <div class="do do--1">
-                        <p>Zbavuje parazitov počas jedinej kúry
-                            <span class="do--small">vďaka tanínom
-                </span>
+            <div class="scrollform"></div>
+            <div class="wrapper">
+                <div class="form-wrap">
+                    <div class="form_left">
+                        <p class="form_left--title"> Akčná zľava!
                         </p>
-                    </div>
-                    <div class="do do--2">
-                        <p>Zlepší váš zdravotný stav a chráni pečeň, srdce, pľúca, žalúdok a pleť proti parazitom
+                        <p class="form_left--sale"> zľava
+                            <span>-50
+                  <span>% 
+                  </span>
+                            </span>
                         </p>
-                    </div>
-                    <div class="do do--3">
-                        <p>Napomáha biologickému rozkladu, v čreve a zneškodňuje vajíčka znesené parazitmi
-                            <span class="do--small">pomocou svojich účinných látok
-                </span>
-                        </p>
-                    </div>
-                </div>
-                <div class="section1-center">
-                    <p class="product-big_title">Akčná zľava!
-                    </p>
-                    <p class="product-big_sale"> zľava
-                        <span>-50
-                <span>% 
-                </span>
-                        </span>
-                    </p>
-                    <div class="product-big_sh">
-                        <p class="product-big_sh--top">27
-                            <span> ks 
-                </span>
-                        </p>
-                        <p class="product-big_sh--bottom">Množstvo výrobkov predávaných v akčnej ponuke je obmedzené
-                        </p>
-                    </div>
-                </div>
-                <div class="section1-right for_top_block">
-                    <div class="section1-right-wrap">
-                        <div class="price-old--top">
-                            <p class="price-text--top"> Plná cena:
-                            </p>
-                            <p class="price-x--top al-cost-promo">
-                            </p>
-                        </div>
-                        <div class="price-new--top">
-                            <p class="price-text--top"> Cena po zľave:
-                            </p>
-                            <p class="price-x--top al-cost">
-                            </p>
-                        </div>
-                        <div class="form-top">
-                            <div class="form-main">
-                              <!--   <p class="shipment-price" style="display: none;"> Poštovné:
-                                    <span> 0 € 
-                    </span>
+                        <div class="price">
+                            <div class="price-old">
+                                <p class="price-text">Plná cena:
                                 </p>
-                                <p class="total-price al-cost" style="display: none;"> Celkom:
-                                    <span> 
-                    </span>
-                                </p> -->
-                                <button type="submit" class="submit-form button pre_toform">Objednať Germitox
-                  </button>
+                                <p class="price-x al-cost-promo">
+                                </p>
+                            </div>
+                            <div class="price-new">
+                                <p class="price-text"> Cena po zľave:
+                                </p>
+                                <p class="price-x al-cost">
+                                </p>
                             </div>
                         </div>
+                        <div class="form_left--sh">
+                            <p class="form_left--sh-bottom"> Počet balení predávaných v rámci špeciálnej ponuky je obmedzený.
+                            </p>
+                            <p class="form_left--sh-top">27
+                                <span>  ks  
+                  </span>
+                            </p>
+                        </div>
+                        <div class="protection"> Vaše dáta sú chránené
+                            <br/> SecureTECH
+                        </div>
                     </div>
-                    <div class="protection">Vaše dáta sú chránené pomocou SecureTECH
+                    <div class="form_right">
+                        <div class="form-main">
+                            <div class="toform"></div>
+                            <iframe style="width: 100%; height:210px;border:0; margin:0;padding:0;" id="order_form" src="https://galiafit.pw"></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-mob">
+                    <div class="section1-center">
+                        <p class="product-big_title">Akčná zľava!
+                        </p>
+                        <p class="product-big_sale"> Zľava
+                            <span>-50
+                  <span>% 
+                  </span>
+                            </span>
+                        </p>
+                        <div class="product-big_sh">
+                            <p class="product-big_sh--bottom"> Počet balení predávaných v rámci špeciálnej ponuky je obmedzený.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="section1-right">
+                        <div class="section1-right-wrap">
+                            <div class="price-old--top">
+                                <p class="price-text--top"> Plná cena:
+                                </p>
+                                <p class="price-x--top al-cost-promo">
+                                </p>
+                            </div>
+                            <div class="price-new--top">
+                                <p class="price-text--top"> Cena po zľave:
+                                </p>
+                                <p class="price-x--top al-cost"> 
+                                </p>
+                            </div>
+                            <div class="form-top">
+                                <div class="form-main">
+                                    <iframe style="width: 100%; height:210px;border:0; margin:0;padding:0;" id="order_form" src="https://galiafit.pw"></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="protection">Vaše dáta sú chránené SecureTECH
+                        </div>
                     </div>
                 </div>
             </div>
